@@ -1,5 +1,5 @@
-RNAPbound_Forward, Expression, .0077, 
-RNAPbound_Reverse, Expression, 8, Km of 1um
+RNAPbound_Forward, Expression, 0.42, 
+RNAPbound_Reverse, Expression, 5e-2, Km of 1um
 
 Promoter_Length, Numeric, 50
 Thio_Length, Numeric, 500
@@ -9,16 +9,15 @@ LVA_tag_Length, Numeric, 40
 Terminator_Length, Numeric, 100
 
 
-Dimmerization_Forward, Numeric, 0.08637, Hsieh & Brenowitz 1997 JBC
+Dimmerization_Forward, Numeric, 1.1, Hsieh & Brenowitz 1997 JBC
 Dimmerization_Reverse, Numeric, 1 
 
-Tetramerization_Forward, Numeric, 0.0637, Hsieh & Brenowitz 1997 JBC
+Tetramerization_Forward, Numeric, 1.1, Hsieh & Brenowitz 1997 JBC
 Tetramerization_Reverse, Numeric, 1 
 
 
 Protein_Inducer_Forward, Numeric, 0.1, !TODO: set up user defined parameters.
 Protein_Inducer_Reverse, Numeric, 0.01, 
-Inducer_Degradation, Numeric, 0.0001, 
 
-DNA_Sequestration_F, Numeric, 0.2,
+DNA_Sequestration_F, Numeric, 1.5,
 DNA_Sequestration_R, Numeric, 1,
