@@ -19,7 +19,7 @@ GamS_RecBCD_F, Numeric, 1, ! TODO: update these numbers based on measurements
 AA_Forward,Expression,log(2) / 0.1, binding rate of 1 ms
 AA_Reverse,Expression, 1 * log(2) / 0.1, Km of 100 for amino acid usage 10uM
 
-RNA_deg,Expression,log(2)/(60*98), mRNA degradation: 12 min half life
+RNA_deg,Expression,log(2)/(60*24), mRNA degradation: 12 min half life
 
 Ribosome_Binding_F, Expression, log(2)/0.1, 100 ms bind rate
 Ribosome_Binding_R, Expression, 0.05 * log(2)/0.1, Km of ~0.05 (from VN model)
