@@ -1,3 +1,5 @@
+2013-08-26 Zoltan Tuza <zoltuz@zoltuz-laptop>
+	* examples/incoherent_ff_loop_function.m: function for of the IFFL for rapid testing exp conditions. + example file
 2013-08-25 Zoltan Tuza <zoltuz@zoltuz-laptop>
 	* tests/test_basic_examples.m: test file to test basic functionality through example files
 	* core/findspecies.m: finding species within complexes 3rd arugment: withinComplex, used for calculate totel concentration of species.
